onprem-resources/kubernetes/keycloak/keycloak-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  replicas: 1
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: jboss/keycloak:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    name: keycloak
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
    - name: https
      port: 8443
      protocol: TCP
  type: NodePort
  selector:
    app: keycloak
